--- a/game/intro.html
+++ b/game/intro.html
@@ -21,8 +21,7 @@
                 <p class="message">Everytime you go to sleep you die and<br>
                  someone else wakes up in your body.</p>
                 <div class="options">
-                  <button class="btn">Yes</button>
-                  <button class="btn">No</button>
+                  <a href="Story/intro.html" class="btn">Then who am !?</a>
                 </div>
               </div>
               
