added a 3 way path, maybe need to redo the story

--- a/game/Story/Dog-12.html
+++ b/game/Story/Dog-12.html
@@ -23,7 +23,7 @@
                 </p>
                 <div class="options">
                   <a href="dog-3a.html" class="btn">Go to Sleep</a>
-                  <a href="dog-2.html" class="btn">Leave</a>
+                  <a href="dog-2.html" class="btn">Sneak Out</a>
                 </div>
               </div>
               
